--- a/frontend/src/app/user/login/login.component.css
+++ b/frontend/src/app/user/login/login.component.css
@@ -1,7 +1,7 @@
 .full-screen{
   height: 100%;
   width: 100%;
-  background-image: url("/assets/images/logo.png");
+  /* background-image: url("/assets/images/logo.png"); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
